# edcount

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING  ChangeLog  Makefile  Makefile.am  NEWS  README  README.md  TODO  bootstrap  configure.ac  format_code  generate_man
doc/: edcount.1
src/: cli.c  cli.h  fasthash.c  fasthash.h  hll.c  hll.h  kmv.c  kmv.h  main.c  test.c  test.h
test/cli/: test.c
test/hll/: test.c
